[package]
name = "farfalle"
version = "0.1.0"
authors = ["David Herberth <github@dav1d.de>"]
edition = "2021"


[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
axum = { version = "0.5", features = ["multipart"] }
tower = "0.4"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

tracing = "0.1"
tracing-subscriber = "0.3"

thiserror = "1"
async-trait = "0.1"
bytes = "1"
rand = "0.8"
infer = "0.9"
bpaf = { version = "0.6", features = ["derive"] }
lazy_static = "1"
once_cell = "1"
askama = { version = "0.11" }
elegant-departure = { version = "0.2", features = ["tokio" ] }
itertools = "0.10"

tree-sitter-highlight = "0.20"

tree-sitter-c = { git = "https://github.com/tree-sitter/tree-sitter-c.git", rev = "7175a6d" }
tree-sitter-cpp = { git = "https://github.com/tree-sitter/tree-sitter-cpp.git", rev = "d5e90fb" }
tree-sitter-python = { git = "https://github.com/tree-sitter/tree-sitter-python.git", rev = "de221ec" }
tree-sitter-javascript = "0.20"
tree-sitter-json = { git = "https://github.com/tree-sitter/tree-sitter-json.git", rev = "7307675" }
tree-sitter-rust = { git = "https://github.com/tree-sitter/tree-sitter-rust.git", rev = "47b061c" }
tree-sitter-typescript = { git = "https://github.com/tree-sitter/tree-sitter-typescript.git", rev = "0ab9d99" }
